--- a/build.gradle
+++ b/build.gradle
@@ -98,8 +98,8 @@ reobf {
 dependencies {
     minecraft "net.minecraftforge:forge:${forge_version}"
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf('com.github.Miquiis:SkinChangerAPI:forge-1.16.5-1.0.0')
-    runtimeOnly fg.deobf('curse.maven:obfuscate-289380:3740120')
+    implementation fg.deobf('com.github.Miquiis:SkinChangerAPI:forge-1.16.5-1.1.0')
+    implementation fg.deobf('curse.maven:obfuscate-289380:3740120')
     implementation 'mysql:mysql-connector-java:8.0.30'
 }
 
